<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/grupo2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">


    <Button
        android:text="@string/antojitos"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_padding_v"
        android:id="@+id/antojitos"/>

    <Button
        android:id="@+id/especialidades"
        android:text="@string/especialidades"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginLeft="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_padding_v" />

    <Button
        android:text="@string/combinations"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginRight="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_padding_v"
        android:id="@+id/combinations"/>

    <Button
        android:id="@+id/tortas"
        android:text="@string/tortas"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_padding"
        android:layout_marginLeft="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_padding_v"
        />

        <Button
            android:text="@string/sopas"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:id="@+id/sopas"/>

        <Button
            android:id="@+id/drinks"
            android:text="@string/drinks"
            android:textColor="@color/white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            />

        </GridLayout>



</LinearLayout>