<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:src="@drawable/portales"
        android:scaleType="fitXY"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/verde"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/verde"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/button_get_started"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:text="@string/button_start"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />



</LinearLayout>